# insurance_calculation

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  tmp.json
alembic/: env.py
alembic/versions/: 2024_11_20_1720-fb9a2e7a99ef_initial_migrate.py
app/: database.py  main.py  models.py  routes.py  schemas.py  tmp.py
