[tool.poetry]
name = "insurance-calculation"
version = "0.1.0"
description = "insurance calculation application"
authors = ["Alexandr Shevchenko <djpestro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
